[package]
name = "sim6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator_6502 = {version="1.1", features=["implementation_transparency"]}
gdbstub = {path="../gdbstub"}
goblin = "0.5"
pretty_env_logger = "0"
