[package]
name = "sim6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator_6502 = {version="1.1", features=["implementation_transparency"]}
gdbstub = "0.6.1"
goblin = "0.5"
pretty_env_logger = "0"
log = "0"
gdbstub_mos_arch = {git="https://github.com/mrk-its/gdbstub_mos_arch"}
